--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,5 +31,7 @@
 @import 'config/common';
 
 // Подключение стилей отдельных блоков и секций =======================================================================================================================
+
 @import 'layout/header';
+@import 'block/_opening';
 @import 'layout/footer';
