aded show-btn script without animation

--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -67,6 +67,7 @@ body {
   flex-direction: column;
   min-height: 100%;
   overflow: hidden; // clip - если используется в проекте position: sticky
+  background: #F3EFEA;
 }
 .page {
   position: relative;
