--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,7 +1,6 @@
 .header{
     padding: 0;
     position: relative;
-    border-bottom: 1px solid;
     &__container{
         @include m-phone{}
     }
@@ -17,9 +16,11 @@
             border-left: 2px solid #000;
             height: 100vh;
             background: #d5cdc4;
-            width: 750px;
+            width: 90%;
             right: -120%;
             transition: right 1s ease;
+            position: absolute;
+            z-index: 5;
         }
     }
     &__lists{
