--- a/src/scss/block/_opening.scss
+++ b/src/scss/block/_opening.scss
@@ -1,3 +1,168 @@
-header{
-    padding: 10px;
+.opening{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    width: 1440px;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    @include m-tablet-wide{
+        width: 1024px;
+    }
+    @include m-tablet{
+        width: 768px;
+    }
+    @include m-phone{
+        flex-direction: column-reverse;
+        width: 100%;
+        position: relative;
+        left: 0;
+        transform: translateX(0);
+        border-top: none;
+        border-bottom: none;
+    }
+    &__img{
+        width: 50%;
+        position: relative;
+        @include m-tablet-wide{
+            height: 550px;
+        }
+        @include m-tablet{
+            height: 415px;
+        }
+        @include m-phone{
+            width: 100%;
+        }
+        &-pic{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            @include m-phone{}
+        }
+        
+    }
+    &__content{
+        width: 50%;
+        padding: 200px 100px 100px 40px;
+        @include m-tablet-wide{
+            height: 550px;
+            padding: 40px;
+        }
+        @include m-tablet{
+            padding: 10px;
+            height: 415px;
+        }
+        @include m-phone{
+            width: 345px;
+            padding: 0;
+            padding: 120px 0 40px 0;
+            height: auto;
+        }
+        &-text{
+            font-family: 'Open Sans', sans-serif;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 150%;
+            color: #323232;
+            margin-bottom: 20px;
+            @include m-phone{
+                width: 200px;
+                margin-bottom: 76px;
+            }
+        }
+        &-title{
+            margin-bottom: 45px;
+            @include m-tablet-wide{
+                margin-bottom: 20px;
+            }
+            @include m-phone{
+                margin-bottom: 40px;
+            }
+        }
+        &-titleText{
+            font-family: 'Tenor Sans', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 48px;
+            line-height: 120%;
+            color: #57463A;
+            @include m-tablet{
+                font-size: 30px;
+            }
+            @include m-phone{
+                margin-bottom: 20px;
+            }
+        }
+        &-subtitle{
+            font-family: 'Open Sans', sans-serif;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 150%;
+            color: #323232;
+            margin-bottom: 70px;
+        }
+        &-btn{
+            margin-bottom: 94px;
+            @include m-tablet-wide{
+                margin-bottom: 60px;
+            }
+            @include m-phone{
+                margin-bottom: 70px;
+            }
+        }
+    }
+    &__socials{
+        display: flex;
+        justify-content: flex-end;
+        padding: 10px 0;
+        @include m-phone{
+            justify-content: flex-start;
+        }
+
+        &-link{
+            width: 30px;
+            height: 30px;
+            transition: 0.2s;
+        }
+        &-link:hover{
+            transform: scale(1.2);
+        }
+        &-link:not(:first-child){
+            margin-left: 20px;
+        }
+        &-pic{
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+.btn-green{
+    position: relative;
+    padding: 18px 60px;
+    background: #A1B29F;
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #F6F6F6;
+    transition: 1.5s;
+}
+.btn-green:hover{
+    background: #525652;
+}
+
