--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,4 +35,6 @@
 @import 'layout/header';
 @import 'block/_opening';
 @import 'block/_about';
+@import 'block/_masters';
+
 @import 'layout/footer';
