--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,5 +36,5 @@
 @import 'block/_opening';
 @import 'block/_about';
 @import 'block/_masters';
-
+@import 'block/_video';
 @import 'layout/footer';
