--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,4 +38,5 @@
 @import 'block/_masters';
 @import 'block/_video';
 @import 'block/_offers';
+@import 'block/_garanties';
 @import 'layout/footer';
