--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -112,5 +112,33 @@ body {
     }
     @include m-phone() {
         max-width: 375px;
+
     }
+}
+
+.title{
+    font-family: 'Tenor Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 120%;
+    color: #57463A;
+}
+
+.subtitle{
+    font-family: 'Tenor Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    color: #000000;
+}
+
+.text{
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 150%;
+    color: #323232;
 }
