--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -62,6 +62,7 @@
             font-size: 16px;
             line-height: 150%;
             color: #323232;
+            transition: 0.4s;
         }
     }
     &__list:not(:last-child){
@@ -82,25 +83,6 @@
             width: 130px;
         }
     }
-    // &__symbols{
-    //     position: absolute;
-    //     top: 50%;
-    //     left: 50%;
-    //     margin-right: -50%;
-    //     transform: translate(-50%, -50%);
-    //     @include m-phone{
-    //         position: relative;
-    //         top: 0;
-    //         left: 0;
-    //         margin-right: 0;
-    //         transform: translate(0, 0);
-    //         display: flex;
-    //         justify-content: space-between;
-    //         align-items: center;
-    //         width: 100%;
-    //         margin-bottom: 50px;
-    //     }
-    // }
     &__logo{
         position: absolute;
         top: 50%;
@@ -116,9 +98,6 @@
             transform: translate(0, 0);
             justify-content: flex-start;
             margin-bottom: 30px;
-            // display: flex;
-            // justify-content: space-between;
-            // align-items: center;
         }
         &-pic{
             object-fit: cover;
@@ -142,7 +121,6 @@
         top: 15px;
         right: 15px;
 
-        // cursor: pointer;
     }
 }
 
@@ -216,4 +194,13 @@
 .active-link{
     color: #57463A;
     border-bottom: 2px solid #57463A;
+}
+
+.passive-link{
+    transition: 0.2s;
+}
+
+.passive-link:hover{
+    color: #525652;
+    border-bottom: 2px solid #525652;
 }
