--- a/src/scss/block/_masters.scss
+++ b/src/scss/block/_masters.scss
@@ -11,7 +11,7 @@
         width: 768px;
     }
     @include m-phone{
-        width: 100%;
+        width: 375px;
         display: flex;
         flex-direction: column;
     }
@@ -19,19 +19,16 @@
     &__img{
         width: 50%;
         @include m-tablet{
-            height: 322px;
+            height: 250px;
         }
         @include m-phone{
             position: relative;
             width: 375px;
-            left: 50%;
-            transform: translateX(-50%);
             margin-bottom: 60px;
         }
         &-pic{
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            object-fit: contain;
         }
     }
     &__content{
@@ -43,9 +40,12 @@
         @include m-tablet{
             position: relative;
             width: 50%;
+            height: 260px;
         }
         @include m-phone{
             width: 100%;
+            height: auto;
+            padding: 0 20px 20px 20px;
         }
         &-title{
 
@@ -55,7 +55,7 @@
             }
             @include m-tablet{
                 font-size: 18px;
-                margin-bottom: 40px;
+                margin-bottom: 20px;
             }
             @include m-phone{
                 font-size: 24px;
@@ -70,7 +70,7 @@
             }
             @include m-tablet{
                 font-size: 14px;
-                margin-bottom: 40px;
+                margin-bottom: 15px;
             }
             @include m-phone{
                 font-size: 18px;
@@ -78,5 +78,13 @@
             }
         }
         &-btn{}
+    }
+}
+
+
+.light-green{
+    background: #EBEEEB;
+    @include m-phone{
+        background: none;
     }
 }
