added second page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,3 +40,11 @@
 @import 'block/_offers';
 @import 'block/_garanties';
 @import 'layout/footer';
+
+
+@import 'mc/_titleFrame';
+@import 'mc/_ourWorks';
+@import 'mc/_technics';
+@import 'mc/_slife';
+@import 'mc/_restauration';
+
