--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -89,6 +89,8 @@
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%);
+        width: 87px;
+        height: 87px;  
         @include m-phone{
             position: relative;
             display: flex;
@@ -100,6 +102,8 @@
             margin-bottom: 30px;
         }
         &-pic{
+            width: 100%;
+            height: 100%;
             object-fit: cover;
         }
     }
@@ -130,10 +134,6 @@
 	width: 36px;
 	height: 31px;
 	padding: 5px;
-	// margin-top: -5px;
-	// margin-left: -5px;
-	// align-items: center;
-	// justify-content: center;
 	cursor: pointer;
 	display: none;
     z-index: 10;
