--- a/src/scss/mc/_titleFrame.scss
+++ b/src/scss/mc/_titleFrame.scss
@@ -55,7 +55,7 @@
     font-size: 16px;
     line-height: 150%;
     color: #4C6D77;
-    transition: 0.4s;
+    transition: all 1.5s ease 0s;
 }
 
 .btn-white:hover{
