--- a/src/scss/mc/_slife.scss
+++ b/src/scss/mc/_slife.scss
@@ -1,21 +1,25 @@
 .slife{
     position: relative;
-    &__bg{
-        position: absolute;
-        z-index: 1;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 1440px;
-        @include m-phone{
-            height: 444px;
-        }
-        &-pic{
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 960px -1000px;
+    background-size: cover;
+    height: 50vh;
+    width: 1920px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    @include m-tablet-wide{
+        background-position: 960px -500px;
     }
+    @include m-tablet{
+        background-position: 960px 0;
+    }
+    @include m-phone{
+        background-position: 830px 0;
+    }
+
     &__content{
+        height: 50vh;
         position: relative;
         z-index: 2;
         padding: 197px 0;
@@ -31,6 +35,10 @@
             max-width: 950px;
             text-align: center;
             margin: 0 auto;
+            @include m-tablet{
+                width: 700px;
+                text-align: center;
+            }
             @include m-phone{
                 position: absolute;
                 width: 360px;
