--- a/src/scss/mc/_titleFrame.scss
+++ b/src/scss/mc/_titleFrame.scss
@@ -1,38 +1,56 @@
 .titleFrame{
     position: relative;
-    width: 100%;
-    @include m-phone{
-        padding-top: 115px;
-    }
-    &__bg{
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 960px 0;
+    background-size: cover;
+    height: 100vh;
+    width: 1920px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    &::before{
+        content: '';
         position: absolute;
-        z-index: 1;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(255,255,255,0.1) 100%);
+    }
+    @include m-phone{
+         padding-top: 250px;
+    }
+
+    &__content{
+        height: 100vh;
+        width: 100%;
         left: 50%;
         transform: translateX(-50%);
-        width: 1440px;
-        &-pic{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    &__content{
-        width: 100%;
         position: relative;
         z-index: 2;
-        padding: 268px 0 152px 0;
+        padding-top: 268px;
+        
         @include m-tablet{
             padding: 263px 0 100px 0;
         }
         @include m-phone{
-            padding: 250px 0 153px 20px;
+            padding: 50px 0 0 0px;
         }
         &-title{
-            text-align: center;
+            width: 980px;
+            display: block;
+            margin: 0 auto;
+            // text-align: center;
             margin-bottom: 100px;
+            @include m-tablet{
+                width: 700px;
+                text-align: center;
+            }
             @include m-phone{
+                width: 320px;
                 margin-bottom: 60px;
                 text-align: left;
+                
             }
         }
         &-btn{
