--- a/src/scss/mc/_titleFrame.scss
+++ b/src/scss/mc/_titleFrame.scss
@@ -1,27 +1,47 @@
 .titleFrame{
     position: relative;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: 960px 0;
-    background-size: cover;
-    height: 100vh;
-    width: 1920px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    &::before{
-        content: '';
+    width: 100%;
+    &__bg{
         position: absolute;
         width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(255,255,255,0.1) 100%);
-    }
-    @include m-phone{
-         padding-top: 250px;
-    }
+        // left: 50%;
+        // transform: translateX(-50%);
+        z-index: 1;
+        height: 100vh;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        @include m-tablet{
+            width: 1440px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-position: 0 0;
+            background-attachment: scroll;
+        }
 
+
+        // &-pic{
+        //     position: relative;
+        //     width: 1440px;
+        //     left: 50%;
+        //     transform: translateX(-50%);
+        //     height: 100vh;
+        //     object-fit: cover;
+        // }
+        &::before{
+            content: '';    
+            z-index: 1;
+            position: absolute;
+            // left: 50%;
+            // transform: translateX(-50%);
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, rgba(255,255,255,0.1) 100%);
+        }
+    }
+    
     &__content{
+        position: relative;
         height: 100vh;
         width: 100%;
         left: 50%;
@@ -34,7 +54,7 @@
             padding: 263px 0 100px 0;
         }
         @include m-phone{
-            padding: 50px 0 0 0px;
+            padding: 200px 0 0 0px;
         }
         &-title{
             width: 980px;
