--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,3 +49,9 @@
 @import 'mc/_restauration';
 @import 'mc/_joinery';
 @import 'mc/_redesign';
+
+@import 'furniture/_frame';
+@import 'furniture/_whywe';
+@import 'furniture/_portfolio';
+
+
