--- a/src/scss/furniture/_portfolio.scss
+++ b/src/scss/furniture/_portfolio.scss
@@ -2,6 +2,9 @@
     position: relative;
     &__content{
         padding: 80px 0;
+        @include m-phone{
+            padding: 40px 0;
+        }
     }
     &__title{
         margin-bottom: 100px;
