added slider and modal window

--- a/src/scss/furniture/_portfolio.scss
+++ b/src/scss/furniture/_portfolio.scss
@@ -48,7 +48,7 @@
         &-pic{
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
             display: none;
         }
     }
