--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,5 +54,7 @@
 @import 'furniture/_whywe';
 @import 'furniture/_portfolio';
 @import 'furniture/_production';
+@import 'furniture/_review';
+@import 'furniture/_feedback.scss';
 
 
