--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -57,4 +57,9 @@
 @import 'furniture/_review';
 @import 'furniture/_feedback.scss';
 
+@import 'aboutus/_history.scss';
+@import 'aboutus/_founder.scss';
+@import 'aboutus/_philosofi.scss';
+@import 'aboutus/_massmedia.scss';
+
 
