--- a/src/scss/block/_opening.scss
+++ b/src/scss/block/_opening.scss
@@ -90,7 +90,7 @@
         &-btn{
             margin-bottom: 94px;
             @include m-tablet-wide{
-                margin-bottom: 60px;
+                margin-bottom: 40px;
             }
             @include m-phone{
                 margin-bottom: 70px;
@@ -106,9 +106,14 @@
         }
 
         &-link{
-            width: 30px;
-            height: 30px;
+            width: 52px;
+            height: 52px;
             transition: 0.2s;
+            border: 2px solid #715B4B;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         &-link:hover{
             transform: scale(1.2);
@@ -117,8 +122,8 @@
             margin-left: 20px;
         }
         &-pic{
-            width: 100%;
-            height: 100%;
+            width: 24px;
+            height: 24px;
         }
     }
 }
